[project]
name = "pistachio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.3",
]

[dependency-groups]
dev = []
